    changelog file.  Thanks to Laurent Bigonville for suggesting
    the change.  (Closes: #933224)
  * Dh_Lib.pm: When setting HOME or XDG_RUNTIME_DIR in compat 13,
    use an absolute path.  Thanks to Dmitry Shachnev for reporting
    the issue.  (Closes: #959731)
  * dh_installsystemd.1: Copy the description for the
    --no-stop-on-upgrade option from dh_installinit.

  [ Translations ]
  * Fix typo in German translation.  (Andreas Bombe)

 -- Niels Thykier <niels@thykier.net>  Fri, 17 Apr 2020 21:55:48 +0000

debhelper (13) unstable; urgency=medium

  [ Niels Thykier ]
  * debian/changelog: Fix typo of a bug number in the 12.10
    entry.  Thanks to Andy Caldwell for reporting it.
  * Dh_Lib.pm: Flag compat 9 as deprecated as announced in
    https://lists.debian.org/debian-devel-announce/2020/02/msg00000.html
  * dh_install: Remove trailing slashes from value to the --sourcedir
    parameter. This avoids dh_install computing an incorrect directory
    name.  Thanks to Mihai Moldovan for reporting the issue.
    (Closes: #955568)
  * dh_missing: Ditto.
  * SequencerUtil.pm/dh: Fix bug where the long forms of --builddirectory
    and --sourcedirectory might be ignored by dh causing it to skip
    dh_auto_* when it should not.  This is in practice only a problem in
    compat 13 as long form of arguments are not optimized in compat 12 or
    earlier.

  [ Chris Leick ]
  * debhelper.pod: Fix typos.
  * dh_makeshlibs: Ditto.
  * dh: Ditto.

  [ Helmut Grohne ]
  * perl_makemaker.pm: Add missing import of "warning" function.

 -- Niels Thykier <niels@thykier.net>  Wed, 15 Apr 2020 14:44:56 +0000

debhelper (12.10) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installsystemd.1: Improve documentation about tmpfiles that
    are now handled by dh_installtmpfiles in compat 13.
  * dh_installtmpfiles: Prefer debian/package.tmpfiles over
    debian/package.tmpfile, but accept the old path with a warning.
    Thanks to Michael Biebl for suggesting the change.