@@ -41,6 +41,11 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     the issue.  (Closes: #959731)
   * dh_installsystemd.1: Copy the description for the
     --no-stop-on-upgrade option from dh_installinit.
+  * dh_installsystemd: Have --no-start or --no-stop-on-upgrade
+    disable --restart-after-upgrade as the documentation says it
+    will.  Thanks to Axel Beckert for reporting the issue.
+    (Closes: #959678)
+  * dh_installinit: Ditto.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
